==> jackkc7vlo/MCUs/TM4C123G/hal/gpio_hal.c <==
#include <hw_config.h>
#include <device_gpio.h>
#include <device_sysctl.h>
#include <gpio_hal.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h> /*lint -e129*/
#include <assert.h>
#include <device_irq.h>
#include <tm4c123gh6pm.h>

    reg_gpio_t *get_gpio_registers(uint32_t port)
    {
        switch (port)
        {
        case GPIOA_PORT:
            return p_device_gpio_a;
        case GPIOB_PORT:
            return p_device_gpio_b;
        case GPIOC_PORT:
            return p_device_gpio_c;
        case GPIOD_PORT:
            return p_device_gpio_d;
        case GPIOE_PORT:
            return p_device_gpio_e;
        case GPIOF_PORT:
            return p_device_gpio_f;
        default:
            // assert(false); // invalid port
            return NULL;
        }
    }

    void gpio_hal_init(p_gpio_hal_t p_handle)
    {

        if (p_handle != NULL)
        {
            switch (p_handle->port_number)
            {
            case GPIOA_PORT:
                p_device_sysctl->rcgcgpio |= SYSCON_RCGCGPIO_PORTA_BIT;
                break;
            case GPIOB_PORT:
                p_device_sysctl->rcgcgpio |= SYSCON_RCGCGPIO_PORTB_BIT;
                break;
            case GPIOC_PORT:
                p_device_sysctl->rcgcgpio |= SYSCON_RCGCGPIO_PORTC_BIT;
                break;
            case GPIOD_PORT:
                p_device_sysctl->rcgcgpio |= SYSCON_RCGCGPIO_PORTD_BIT;
                break;
            case GPIOE_PORT:
                p_device_sysctl->rcgcgpio |= SYSCON_RCGCGPIO_PORTE_BIT;
                break;
            case GPIOF_PORT:
                p_device_sysctl->rcgcgpio |= SYSCON_RCGCGPIO_PORTF_BIT;
                break;
            default:
                // assert(false); // invalid port
                break;
            }
        }
        /*
        if (p_gpio_hal->config_handle != NULL)
        {
            p_gpio_hal_config_handle_t p_config = (p_gpio_hal_config_handle_t)p_gpio_hal->config_handle;
            reg_gpio_t                *p_gpio   = (reg_gpio_t *)p_gpio_hal->p_device_gpio;
            // Enable pins
            p_gpio->den &= ~p_config->pin_mask;  // Clear bits that are not to be used
            p_gpio->den |= (p_config->pin_mask); // Set bits to enable digital function

            // Configure pin directions
            p_gpio->dir &= ~p_config->pin_mask;                             // Clear bits to set as input
            p_gpio->dir |= (p_config->direction_mask & p_config->pin_mask); // Set bits to set as output
        }
            */
    }

    bool gpio_hal_register_callback(p_gpio_hal_t p_handle, const void *p_callback_handle, uint8_t pin,
                                    gpio_hal_interrupt_callback_t callback, void *p_callback_context, irq_edge_t edge)
    {
        reg_gpio_t *p_gpio = (reg_gpio_t *)p_handle->p_device_gpio;
        if (p_handle == NULL || callback == NULL)
        {
            return false;
        }
        p_handle->callbacks[pin].callback          = callback;
        p_handle->callbacks[pin].p_callback_handle = (void *)p_callback_handle;
        p_handle->callbacks[pin].callback_context  = p_callback_context;

        GPIO_PORTF_LOCK_R = 0x4C4F434B; // Unlock GPIO Port F
        GPIO_PORTF_CR_R |= (1 << 4);

        if (edge == IRQ_NONE)
        {
            // Disable interrupt
            p_gpio->im &= ~(1U << pin);
            return true;
        }

        p_gpio->is &= ~(1U << pin);  // Edge sensitive
        p_gpio->ibe &= ~(1U << pin); // Single edge

        if (edge == IRQ_POSITIVE)
        {
            p_gpio->iev |= (1U << pin); // Rising edge
        }
        else if (edge == IRQ_NEGATIVE)
        {
            p_gpio->iev &= ~(1U << pin); // Falling edge
        }
        else if (edge == IRQ_BOTH)
        {
            p_gpio->ibe |= (1U << pin); // Both edges
        }

        // p_handle->irq_edge          = edge;
        p_gpio->mis |= (1U << pin); // Enable interrupt
        p_gpio->icr |= (1U << pin); // Enable interrupt
        p_gpio->im |= (1U << pin);  // Enable interrupt
        // NVIC_ClearPendingIRQ(PIO0_IRQn);
        // NVIC_EnableIRQ(PIO0_IRQn);
        NVIC_EN0_R |= (1 << 30); // Enable IRQ30 (GPIOF)
        __enable_irq();

        return true;
    }
