==> jackkc7vlo/MCUs/Nucleo-L412RB/hal/gpio_hal.c <==
#include <hw_config.h>
#include <device_gpio.h>
#include <device_irq.h>
#include <device_rcc.h>
#include <device_scb.h>
#include <device_syscfg.h>
#include <gpio_hal.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h> /*lint -e129*/
#include <assert.h>

    reg_gpio_t *get_gpio_registers(uint32_t port)
    {
        switch (port)
        {
        case GPIOA_PORT:
            return p_device_gpio_a;
        case GPIOB_PORT:
            return p_device_gpio_b;
        case GPIOC_PORT:
            return p_device_gpio_c;
        case GPIOD_PORT:
            return p_device_gpio_d;
        case GPIOE_PORT:
            return p_device_gpio_e;
        case GPIOH_PORT:
            return p_device_gpio_h;
        default:
            assert(false); // invalid port
            return NULL;
        }
    }

    void gpio_hal_init(p_gpio_hal_t p_handle)
    {

        if (p_handle != NULL)
        {
            switch (p_handle->port_number)
            {
            case GPIOA_PORT:
                p_device_rcc->ahb2enr |= RCC_AHB2ENR_GPIOAEN_BIT;
                break;
            case GPIOB_PORT:
                p_device_rcc->ahb2enr |= RCC_AHB2ENR_GPIOBEN_BIT;
                break;
            case GPIOC_PORT:
                p_device_rcc->ahb2enr |= RCC_AHB2ENR_GPIOCEN_BIT;
                break;
            case GPIOD_PORT:
                p_device_rcc->ahb2enr |= RCC_AHB2ENR_GPIODEN_BIT;
                break;
            case GPIOE_PORT:
                p_device_rcc->ahb2enr |= RCC_AHB2ENR_GPIOEEN_BIT;
                break;
            case GPIOH_PORT:
                p_device_rcc->ahb2enr |= RCC_AHB2ENR_GPIOHEN_BIT;
                break;
            default:
                assert(false); // invalid port
                break;
            }
        }
    }

    bool gpio_hal_register_callback(p_gpio_hal_t p_handle, const void *p_callback_handle, uint8_t pin,
                                    gpio_hal_interrupt_callback_t callback, void *p_callback_context, irq_edge_t edge)
    {

        if (p_handle == NULL || callback == NULL)
        {
            return false;
        }
        p_handle->callbacks[pin].callback          = callback;
        p_handle->callbacks[pin].p_callback_handle = (void *)p_callback_handle;
        p_handle->callbacks[pin].callback_context  = p_callback_context;

        // p_handle->irq_edge          = edge;

        p_device_rcc->apb2enr |= RCC_APB2ENR_SYSCFGEN_BIT;
        p_device_syscfg->exticr[pin / 4U] &= ~(0x0FU << (4U * (pin % 4U))); // Clear EXTI configuration bits for the pin
        p_device_syscfg->exticr[pin / 4U] |=
            ((p_handle->port_number & 0x0FU) << (4U * (pin % 4U))); // Set EXTI configuration bits for the pin
        p_device_exti->imr1 |= (1U << pin);                         // Unmask interrupt for the pin
        switch (edge)
        {
        case IRQ_POSITIVE:
            p_device_exti->rtsr1 |= (1U << pin);  // Enable rising edge trigger
            p_device_exti->ftsr1 &= ~(1U << pin); // Disable falling edge trigger
            break;
        case IRQ_NEGATIVE:
            p_device_exti->ftsr1 |= (1U << pin);  // Enable falling edge trigger
            p_device_exti->rtsr1 &= ~(1U << pin); // Disable rising edge trigger
            break;
        case IRQ_BOTH:
            p_device_exti->rtsr1 |= (1U << pin); // Enable rising edge trigger
            p_device_exti->ftsr1 |= (1U << pin); // Enable falling edge trigger
            break;
        default:
            return false;
            break;
            ;
        }
        if (pin == 0U)
        {
            NVIC_EnableIRQ(EXTI0_IRQN);
            NVIC_SetPriority(EXTI0_IRQN, BUTTON_IRQ_PRIORITY);
        }
        else if (pin == 1U)
        {
            NVIC_EnableIRQ(EXTI1_IRQN);
            NVIC_SetPriority(EXTI1_IRQN, BUTTON_IRQ_PRIORITY);
        }
        else if (pin == 2U)
        {
            NVIC_EnableIRQ(EXTI2_IRQN);
            NVIC_SetPriority(EXTI2_IRQN, BUTTON_IRQ_PRIORITY);
        }
        else if (pin == 3U)
        {
            NVIC_EnableIRQ(EXTI3_IRQN);
            NVIC_SetPriority(EXTI3_IRQN, BUTTON_IRQ_PRIORITY);
        }
        else if (pin == 4U)
        {
            NVIC_EnableIRQ(EXTI4_IRQN);
            NVIC_SetPriority(EXTI4_IRQN, BUTTON_IRQ_PRIORITY);
        }
        else if (pin <= 9U)
        {
            NVIC_EnableIRQ(EXTI9_5_IRQN);
            NVIC_SetPriority(EXTI9_5_IRQN, BUTTON_IRQ_PRIORITY);
        }
        else if (pin <= 15U)
        {
            NVIC_EnableIRQ(EXTI15_10_IRQN);
            NVIC_SetPriority(EXTI15_10_IRQN, BUTTON_IRQ_PRIORITY);
        }
        else
        {
            return false; // invalid pin
        }

        return true;
    }
